[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/CharSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/lobby_single.gd" type="Script" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 2 )

[node name="Back" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 22.0
text = "Back"

[node name="Start" type="Button" parent="."]
margin_left = 861.0
margin_top = 5.0
margin_right = 955.0
margin_bottom = 25.0
text = "Ready"

[node name="OpenCharSelect" type="Button" parent="."]
margin_left = 4.0
margin_top = 395.0
margin_right = 321.0
margin_bottom = 462.0
text = "Select Vehicle"

[node name="OpenMapSelect" type="Button" parent="."]
margin_left = 4.0
margin_top = 466.0
margin_right = 321.0
margin_bottom = 535.0
text = "Select Map"

[node name="CharSelectPopup" type="PopupPanel" parent="."]
margin_left = 5.22778
margin_top = 4.7962
margin_right = 1017.23
margin_bottom = 597.796

[node name="CharSelect" parent="CharSelectPopup" instance=ExtResource( 1 )]

[node name="CloseCharSelect" type="Button" parent="CharSelectPopup/CharSelect"]
margin_left = 0.793701
margin_top = -0.984251
margin_right = 98.7937
margin_bottom = 19.0157
text = "Close"

[node name="MapSelectPopup" type="PopupPanel" parent="."]
margin_left = 329.0
margin_top = 6.0
margin_right = 909.0
margin_bottom = 231.0

[node name="Panel" type="Panel" parent="MapSelectPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 576.0
margin_bottom = 221.0

[node name="Label" type="Label" parent="MapSelectPopup/Panel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 15.0
text = "Select Game Mode"
align = 1

[node name="CloseMapSelect" type="Button" parent="MapSelectPopup/Panel"]
margin_left = -3.15454
margin_top = -2.94878
margin_right = 112.846
margin_bottom = 17.0512
text = "Cancel"

[node name="Scroll" type="ScrollContainer" parent="MapSelectPopup/Panel"]
margin_top = 19.0
margin_right = 574.0
margin_bottom = 221.0

[node name="VBox" type="VBoxContainer" parent="MapSelectPopup/Panel/Scroll"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="OpenCharSelect" to="." method="_on_OpenCharSelect_pressed"]
[connection signal="pressed" from="OpenMapSelect" to="." method="_on_OpenMapSelect_pressed"]
[connection signal="pressed" from="CharSelectPopup/CharSelect/CloseCharSelect" to="." method="_on_CloseCharSelect_pressed"]
[connection signal="pressed" from="MapSelectPopup/Panel/CloseMapSelect" to="." method="_on_CloseMapSelect_pressed"]

[editable path="CharSelectPopup/CharSelect"]
